2008-12-23  higepon  <higepon@users.sourceforge.jp>

        * tools/psyntax-r6rs/rev10_to_10/psyntax/expander.ss (guard-macro): Fixed.

        * VM.cpp (VM::run): Added LOCAL_CALL instruction for better performance.

2008-12-21  higepon  <higepon@users.sourceforge.jp>

        * compiler.scm (errorf): Defined for compatibility.

        * EqvHashTable.cpp : Modiffied to eqv-hashtable.

        * lib/core/hashtable.scm (make-eqv-hashtable): Added for bug fix.

        * Makefile.am: Merged branch/pass2define-bug to trunk.

        * call.inc.cpp: Added for better performance. (L1 cache miss)

2008-12-20  higepon  <higepon@users.sourceforge.jp>

        * Added checking index out of range vector-set! and vector-ref.

        * Use NUMBER_ADD instead of NUMBER_SUB on some situation.

        * instruction.scm: Removed some compound instruction.

2008-12-19  higepon  <higepon@users.sourceforge.jp>

        * Fasl.h (scheme): Changed data structure for better performance.

        * VM-inl.h (pop): Added pop();

        * (define-insn VECTOR_REF_PUSH 0)
        * (define-insn REFER_LOCAL_CALL 2)

        * tools/psyntax-r6rs/rev10_to_10/psyntax/library-manager.ss (psyntax): Added fast-equal?.

        * Fasl.h (scheme): Changed Fasl for Instruction. It fits 8 bit.

        * Added (define-insn REFER_FREE_CALL 2)
        * Added (define-insn REFER_GLOBAL_PUSH 1)
        * Added (define-insn REFER_LOCAL_VECTOR_REF 1)
        * Added (define-insn REFER_LOCAL_VECTOR_SET 1)
        * Added (define-insn PUSH_CONSTANT_VECTOR_SET 1)

2008-12-18  higepon  <higepon@users.sourceforge.jp>

        * Removed some compound instructions.

        * Added (define-insn REFER_LOCAL_BRANCH_NOT_LT 2).

        * Added (define-insn REFER_LOCAL_BRANCH_NOT_NULL 2).

        * Added (define-insn REFER_LOCAL_PUSH_CONSTANT_BRANCH_NOT_LE 3)
                (define-insn REFER_LOCAL_PUSH_CONSTANT_BRANCH_NOT_GE 3)
                (define-insn REFER_LOCAL_PUSH_CONSTANT_BRANCH_NOT_NUMBER_EQUAL 3)
