@@ -168,9 +168,9 @@ compiler-with-library.scmc: ./compiler-with-library.scm ./compiler-vm.scm
 
 SUFFIXES: .scmc .h
 
-# .scmc.h:
-# 	mosh scripts/scmc2fasl.scm $(PWD)/$< $(PWD)/$<.fasl
-# 	mosh scripts/binary2c.scm $(PWD)/$<.fasl $(PWD)/$@
+.scmc.h:
+	mosh scripts/scmc2fasl.scm $(PWD)/$< $(PWD)/$<.fasl
+	mosh scripts/binary2c.scm $(PWD)/$<.fasl $(PWD)/$@
 
 match.scmc: ./match.scm ./compiler-vm.scm
 	@GOSH@ ./vm.scm compile-file-without-macro $(PWD)/$< > $(PWD)/$@
