@@ -3093,9 +3093,9 @@
                             (let1 create-non-continuable-violation (symbol-value 'create-non-continuable-violation)
                               (if create-non-continuable-violation
                                   (proc (create-non-continuable-violation c))
-                                  (display "create-non-continuable-violation is not set\n" (current-error-port)))))))
-                (throw (format "error in raise: returned from non-continuable exception\n\nirritants:~a\n" c)))))
-    (throw (format "error in raise: unhandled exception has occurred\n\nirritants:~a\n" c))))
+                                  (display "      create-non-continuable-violation is not set\n" (current-error-port)))))))
+                (throw (format "     error in raise: returned from non-continuable exception\\nn~a\n" c)))))
+    (throw (format "    error in raise: unhandled exception has occurred\n\n~a\n" c))))
 
 (define (condition-printer c)
   (if (condition? c)
