@@ -1,3 +1,7 @@
+2008-12-24  higepon  <higepon@users.sourceforge.jp>
+
+        * VM.cpp (getStackTrace): Improved stack trace.
+
 2008-12-23  higepon  <higepon@users.sourceforge.jp>
 
         * tools/psyntax-r6rs/rev10_to_10/psyntax/expander.ss (guard-macro): Fixed.
